--- a/src/app/products/pages/numbers-page/numbers-page.component.html
+++ b/src/app/products/pages/numbers-page/numbers-page.component.html
@@ -1,1 +1,21 @@
-<p>numbers-page works!</p>
+<p-panel header="Pipes numéricos" class="p-2">
+  <p>Pipes incluídos en angular - Usualmente en el Common Module</p>
+</p-panel>
+
+<div class="grid ">
+  <div class="col-12 md:col-4">
+    <p-card header="Ventas netas" subheader="del presente año">
+      {{ totalSells + 1294 | number:'1.2-2'}}
+    </p-card>
+  </div>
+  <div class="col-12 md:col-4">
+    <p-card header="Ventas brutas" subheader="del presente año">
+      {{ totalSells + 1294 | currency:'HNL':'symbol-narrow':'1.4-4'}}
+    </p-card>
+  </div>
+  <div class="col-12 md:col-4">
+    <p-card header="Ganancia porcentual" subheader="del presente año">
+      {{ percent | percent:'1.2-2 '}}
+    </p-card>
+  </div>
+</div>
