--- a/src/app/products/pages/uncommons-page/uncommons-page.component.html
+++ b/src/app/products/pages/uncommons-page/uncommons-page.component.html
@@ -5,11 +5,6 @@
 <div class="grid">
   <div class="col-12 md:col-6">
     <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
-
-    </p-fieldset>
-  </div>
-  <div class="col-12 md:col-6">
-    <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
       <p>Saludos {{name}} es un placer
         {{gender | i18nSelect:invitationMap}}
         a nuestro evento</p>
@@ -20,21 +15,36 @@
       </p-button>
     </p-fieldset>
   </div>
+
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+      <p>Actualmente {{clients.length | i18nPlural:clientsMap}}</p>
+      <p-button
+      label="Borrar cliente"
+      (click) = "deleteClient()"
+      >
+      </p-button>
+    </p-fieldset>
+  </div>
+
   <div class="col-12 md:col-6">
     <p-fieldset legend="Slice Pipe" [toggleable]="true">
 
     </p-fieldset>
   </div>
+
   <div class="col-12 md:col-6">
     <p-fieldset legend="Json Pipe" [toggleable]="true">
 
     </p-fieldset>
   </div>
+
   <div class="col-12 md:col-6">
     <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
 
     </p-fieldset>
   </div>
+
   <div class="col-12 md:col-6">
     <p-fieldset legend="Async Pipe" [toggleable]="true">
 
