--- a/src/app/products/pages/uncommons-page/uncommons-page.component.html
+++ b/src/app/products/pages/uncommons-page/uncommons-page.component.html
@@ -45,13 +45,17 @@
 
   <div class="col-12 md:col-6">
     <p-fieldset legend="Json Pipe" [toggleable]="true">
-
+      <pre>{{person | json}}</pre>
     </p-fieldset>
   </div>
 
   <div class="col-12 md:col-6">
     <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
-
+      <ul>
+        <li *ngFor="let i of person | keyvalue">
+          <b>{{i.key | titlecase}}:</b> {{i.value}}
+        </li>
+      </ul>
     </p-fieldset>
   </div>
 
