--- a/src/app/products/pages/order/order.component.html
+++ b/src/app/products/pages/order/order.component.html
@@ -13,9 +13,9 @@
           class="mr-2"></p-button>
       </div>
       <div class="p-toolbar-group-end">
-        <p-button class="mr-2" label="Por nombre" icon="pi pi-sort" styleClass="p-button-success mr-2"></p-button>
-        <p-button class="mr-2" label="Por volar" icon="pi pi-sort" styleClass="p-button-danger"></p-button>
-        <p-button class="mr-2" label="Por color" icon="pi pi-sort" styleClass="p-button-help"></p-button>
+        <p-button (click)="changeKeyOrder('name')" class="mr-2" label="Por nombre" icon="pi pi-sort" styleClass="p-button-success mr-2"></p-button>
+        <p-button (click)="changeKeyOrder('canFly')" class="mr-2" label="Por volar" icon="pi pi-sort" styleClass="p-button-danger"></p-button>
+        <p-button (click)="changeKeyOrder('color')" class="mr-2" label="Por color" icon="pi pi-sort" styleClass="p-button-help"></p-button>
       </div>
   </p-toolbar>
 </div>
@@ -23,7 +23,7 @@
 <div class="grid">
   <div class="col mt-2">
     <p-panel header="Héroes">
-      <p-table [value]="heroes" [tableStyle]="{ 'min-width': '50rem' }">
+      <p-table [value]="heroes | sortBy:keyOrder" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="header">
             <tr>
                 <th>Name</th>
